get in touch w us added

--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,7 @@
   
               <!-- Contact Details -->
               <div class="contact-details">
+                <h2>Get in touch with Us!</h2>
                   <h4>Email Us:</h4>
                   <p><a href="mailto:nazwaperfume_e_m@hotmail.com">nazwaperfume_e_m@hotmail.com</a></p>
   
