Added new product images (alshams, dirham, fatima, muwaten, sheikhabd), Bukhoor.html, and updated contact.html, footer.html, header.html, index.html, styles.css

--- a/header.html
+++ b/header.html
@@ -5,8 +5,8 @@
         <h1>AL MASHHOUR PERFUMES</h1>
      <ul>
         <li><a href="index.html">HOME</a></li>
-        <li><a href="#About">ABOUT</a></li>
-        <li><a href="#Categories">CATEGORIES</a></li>
+        <li><a href="#SPRAYS">SPRAYS</a></li>
+        <li><a href="Bukhoor.html">BUKHOOR</a></li>
         <li><a href="contact.html">CONTACT US</a></li>
      </ul> 
     </nav>
