--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Al Mashhour Perfumes</title>
     <script src="loadheader.js" defer></script>
+    <script src="loadfooter.js" defer></script>
     <link rel="icon" href="favicon.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="header-container"></div>
  
+   <footer>
     <div id="footer-container"></div>
+   </footer>
 </body>
 </html>
