--- a/footer.html
+++ b/footer.html
@@ -1,17 +1,30 @@
 <footer>
-    <div>
-        <h2>SHOP BY COLLECTIONS</h2>
-        <ul>
-            <li>30ML Perfumes</li>
-            <li>50ML Perfumes</li>
-            <li>100Ml Perfumes</li>
-            <li>French Attar</li>
-            <li>Bukhoor</li> 
-        </ul>
+    <div class="footer-content">
+        <div class="collections">
+          <h2>SHOP BY COLLECTIONS</h2>
+          <ul>
+            <li><a href="30ML Perfumes">30ML Perfumes</a></li>
+            <li><a href="50ML Perfumes">50ML Perfumes</a></li>
+            <li><a href="100ML Perfumes">100Ml Perfumes</a></li>
+            <li><a href="French Attar">French Attar</a></li>
+            <li><a href="Bukhoor">Bukhoor</a></li> 
+           </ul>
+        </div>
+
+        <div class="footer-links">
+            <h2>HELP</h2>
+            <ul>
+                <li><a href="/home">Home</a></li>
+                <li><a href="/about">About Us</a></li>
+                <li><a href="/services">Services</a></li>
+                <li><a href="/contact">Contact Us</a></li>
+                <li><a href="/privacy-policy">Privacy Policy</a></li>
+            </ul>
+        </div> 
+        </div>
+
+    <div class="footer-copyright">
+        <p>&copy; 2024, Al Mashhour Perfumes Industry, Sharjah - UAE. All rights reserved.</p>
     </div>
 
-
-
-    <p> &copy; 2024, Al Mashhour Perfumes Industry, Sharjah - UAE. All rights reserved.</p>
-
-</footer>
+</footer>  
