Updated Bukhoor.html, images, header, index, and styles; added new sprays and images.

--- a/header.html
+++ b/header.html
@@ -5,16 +5,10 @@
         <h1>AL MASHHOUR PERFUMES</h1>
      <ul>
         <li><a href="index.html">HOME</a></li>
-        <li><a href="#SPRAYS">SPRAYS</a></li>
+        <li><a href="sprays.html">SPRAYS</a></li>
         <li><a href="Bukhoor.html">BUKHOOR</a></li>
         <li><a href="contact.html">CONTACT US</a></li>
      </ul> 
     </nav>
     </header>
-     <!--  <header>
-   <div class="intro">
-        <h3>It's a blend of tradition, innovation, and elegance. At Al Mashhour Perfumes, we specialize in crafting scents that leave an indelible mark, creating timeless memories through our exquisite fragrances.</h3>
-
-    </div> 
-    </header> -->
     
