--- a/index.html
+++ b/index.html
@@ -10,11 +10,46 @@
     <link rel="icon" href="favicon.png">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="contact">
     <div id="header-container"></div>
- 
-   <footer>
-    <div id="footer-container"></div>
-   </footer>
+
+    <div class="about">
+    <div class="intro">
+        <h3>It's a blend of tradition, innovation, and elegance. At Al Mashhour Perfumes, we specialize in crafting scents that leave an indelible mark, creating timeless memories through our exquisite fragrances.</h3>
+    </div> 
+    </div>
+
+    <div class="best-sellers">
+        <h2>Best Sellers</h2>
+        
+        <div class="product-containerr">
+            <!-- Add your product items here -->
+            <div class="productt">
+                <img src="Black orchid.jpeg" alt="Tomford black Orchid">
+                <h3>Tomford black Orchid</h3>
+                <p class="price">25 AED</p>
+            </div>
+
+            <div class="productt">
+                <img src="gissah.jpeg" alt="Gissah">
+                <h3>Gissah</h3>
+                <p class="price">25 AED</p>
+            </div>
+
+            <div class="productt">
+                <img src="sheikh abd.jpeg" alt="Sheikh Abdullah">
+                <h3>Sheikh Abdullah</h3>
+                <p class="price">25 AED</p>
+            </div>
+
+            <!-- Repeat for other products -->
+        </div>
+    </div>
+
+
+    <footer>
+        <div id="footer-container"></div>
+     </footer> 
+
 </body>
 </html>
