Moved images to bukhoor directory and updated Bukhoor.html

--- a/Bukhoor.html
+++ b/Bukhoor.html
@@ -16,32 +16,31 @@
 
    <div class="product-container">
     <div class="product">
-        <img src="fatima.png" alt="Fatima">
+        <img src="/bukhoor/fatima.png" alt="Fatima">
         <h3>Fatima</h3>
         <p class="price">20 AED</p>
     </div>
     <div class="product">
-        <img src="dirham.png" alt="Dirham">
+        <img src="/bukhoor/dirham.png" alt="Dirham">
         <h3>Dirham</h3>
         <p class="price">20 AED</p>
     </div>
     <div class="product">
-        <img src="sheikhabd.png" alt="Sheikh Abdullah">
+        <img src="/bukhoor/sheikhabd.png" alt="Sheikh Abdullah">
         <h3>Sheikh Abdullah</h3>
         <p class="price">20 AED</p>
     </div>
     <div class="product">
-        <img src="alshams.png" alt="Al-Shams">
+        <img src="/bukhoor/alshams.png" alt="Al-Shams">
         <h3>AL-Shams</h3>
         <p class="price">20 AED</p>
     </div>
     <div class="product">
-        <img src="muwaten.png" alt="Muwaten">
+        <img src="/bukhoor/muwaten.png" alt="Muwaten">
         <h3>Muwaten</h3>
         <p class="price">20 AED</p>
     </div>
 </div>
-
 
 
 <footer>
