--- a/index.html
+++ b/index.html
@@ -8,48 +8,53 @@
     <script src="loadheader.js" defer></script>
     <script src="loadfooter.js" defer></script>
     <link rel="icon" href="favicon.png">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styless.css">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Bootstrap JS Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
-<body class="contact">
+<body>
     <div id="header-container"></div>
 
-    <div class="about">
-    <div class="intro">
-        <h3>It's a blend of tradition, innovation, and elegance. At Al Mashhour Perfumes, we specialize in crafting scents that leave an indelible mark, creating timeless memories through our exquisite fragrances.</h3>
+    <div class=" about class text-white border py-3 my-3">
+      <div class="intro"> <h3>It's a blend of tradition, innovation, and elegance. At Al Mashhour Perfumes, we specialize in crafting scents that leave an indelible mark, creating timeless memories through our exquisite fragrances.</h3></div> 
     </div> 
-    </div>
 
-    <div class="best-sellers">
-        <h2>Best Sellers</h2>
+    <div class="container">
+        <h2 class="text-center mt-3">Best Sellers</h2>
         
-        <div class="product-containerr">
-            <!-- Add your product items here -->
+        <div class="row">
+            <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4 col-xxl-3">
             <div class="productt">
                 <img src="Black orchid.jpeg" alt="Tomford black Orchid">
                 <h3>Tomford black Orchid</h3>
                 <p class="price">25 AED</p>
             </div>
+            </div>
 
+            <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4 col-xxl-3">
             <div class="productt">
                 <img src="gissah.jpeg" alt="Gissah">
                 <h3>Gissah</h3>
                 <p class="price">25 AED</p>
             </div>
+            </div>
 
+            <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4 col-xxl-3">
             <div class="productt">
                 <img src="sheikh abd.jpeg" alt="Sheikh Abdullah">
                 <h3>Sheikh Abdullah</h3>
                 <p class="price">25 AED</p>
             </div>
-
-            <!-- Repeat for other products -->
+            </div>
         </div>
     </div>
 
 
-    <footer>
-        <div id="footer-container"></div>
-     </footer> 
+        <footer>
+            <div id="footer-container"></div>
+        </footer> 
 
-</body>
+ </body>    
 </html>
