--- a/Bukhoor.html
+++ b/Bukhoor.html
@@ -4,43 +4,50 @@
     <meta charset="UTF-8">
     <meta name="keywords" content="Perfumes, UAE, Perfume">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bukhoor | Al Mashhour Perfumes</title>
+    <title>Al Mashhour Perfumes</title>
     <script src="loadheader.js" defer></script>
     <script src="loadfooter.js" defer></script>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
+    <link rel="icon" href="favicon.png">
     <link rel="stylesheet" href="styles.css">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Bootstrap JS Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
+<body>
+    <div id="header-container"></div>
+    <div class="container">
+        <div class="row product-container">
+            <div class="col-6 col-md-3 product"> <!-- col-md-3 for 4 products per row -->
+                <img src="/bukhoor/fatima.png" alt="Fatima">
+                <h3>Fatima</h3>
+                <p class="price">20 AED</p>
+            </div>
+            <div class="col-6 col-md-3 product">
+                <img src="/bukhoor/dirham.png" alt="Dirham">
+                <h3>Dirham</h3>
+                <p class="price">20 AED</p>
+            </div>
+            <div class="col-6 col-md-3 product">
+                <img src="/bukhoor/sheikhabd.png" alt="Sheikh Abdullah">
+                <h3>Sheikh Abdullah</h3>
+                <p class="price">20 AED</p>
+            </div>
+            <div class="col-6 col-md-3 product">
+                <img src="/bukhoor/alshams.png" alt="Al-Shams">
+                <h3>AL-Shams</h3>
+                <p class="price">20 AED</p>
+            </div>
+            <div class="col-6 col-md-3 product">
+                <img src="/bukhoor/muwaten.png" alt="Muwaten">
+                <h3>Muwaten</h3>
+                <p class="price">20 AED</p>
+            </div>
+        </div>
+    </div>
+    
 
-<body class="contact">
-   <div id="header-container"></div>
-
-   <div class="product-container">
-    <div class="product">
-        <img src="/bukhoor/fatima.png" alt="Fatima">
-        <h3>Fatima</h3>
-        <p class="price">20 AED</p>
-    </div>
-    <div class="product">
-        <img src="/bukhoor/dirham.png" alt="Dirham">
-        <h3>Dirham</h3>
-        <p class="price">20 AED</p>
-    </div>
-    <div class="product">
-        <img src="/bukhoor/sheikhabd.png" alt="Sheikh Abdullah">
-        <h3>Sheikh Abdullah</h3>
-        <p class="price">20 AED</p>
-    </div>
-    <div class="product">
-        <img src="/bukhoor/alshams.png" alt="Al-Shams">
-        <h3>AL-Shams</h3>
-        <p class="price">20 AED</p>
-    </div>
-    <div class="product">
-        <img src="/bukhoor/muwaten.png" alt="Muwaten">
-        <h3>Muwaten</h3>
-        <p class="price">20 AED</p>
-    </div>
-</div>
+    
 
 
 <footer>
