--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="loadheader.js" defer></script>
     <script src="loadfooter.js" defer></script>
     <link rel="icon" href="favicon.png">
-    <link rel="stylesheet" href="styless.css">
+    <link rel="stylesheet" href="styles.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Bootstrap JS Bundle with Popper -->
