--- a/footer.html
+++ b/footer.html
@@ -4,20 +4,20 @@
             <div class="col-12 col-sm-6 col-md-4">
                 <h2>SHOP BY COLLECTIONS</h2>
                 <ul>
-                    <li><a href="30ML Perfumes">30ML Perfumes</a></li>
-                    <li><a href="50ML Perfumes">50ML Perfumes</a></li>
+                    <li><a href="/30ML-white.html">30ML Perfumes</a></li>
+                    <li><a href="/50ml-color.html">50ML Perfumes</a></li>
                     <li><a href="100ML Perfumes">100Ml Perfumes</a></li>
-                    <li><a href="Bukhoor">Bukhoor</a></li>
+                    <li><a href="/Bukhoor.html">Bukhoor</a></li>
                 </ul>
             </div>
 
             <div class="col-12 col-sm-6 col-md-4">
                 <h2>HELP</h2>
                 <ul>
-                    <li><a href="/home">Home</a></li>
-                    <li><a href="/about">About Us</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html#about">About Us</a></li>
                     <li><a href="/services">Services</a></li>
-                    <li><a href="/contact">Contact Us</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                     <li><a href="/privacy-policy">Privacy Policy</a></li>
                 </ul>
             </div>
