--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body>
     <div id="header-container"></div>
 
-    <div class=" about class text-white border py-3 my-3">
-      <div class="intro"> <h3>It's a blend of tradition, innovation, and elegance. At Al Mashhour Perfumes, we specialize in crafting scents that leave an indelible mark, creating timeless memories through our exquisite fragrances.</h3></div> 
+    <div class="about class text-white border py-3 my-3">
+      <div class="intro" id="about"> <h3>It's a blend of tradition, innovation, and elegance. At Al Mashhour Perfumes, we specialize in crafting scents that leave an indelible mark, creating timeless memories through our exquisite fragrances.</h3></div> 
     </div> 
 
     <div class="container">
